--- a/rspamd/Dockerfile
+++ b/rspamd/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:3.17
 
+ENV PATH="/container:${PATH}"
+
 RUN apk update && \
     apk add rspamd rspamd-proxy rspamd-utils \
     rspamd-controller supervisor nginx && \
@@ -10,4 +12,7 @@ VOLUME ["/var/lib/rspamd"]
 EXPOSE 11332/tcp
 EXPOSE 80/tcp
 
+COPY ./entrypoint.sh /container/entrypoint.sh
+
+ENTRYPOINT ["entrypoint.sh"]
 CMD exec /usr/bin/supervisord -c /etc/supervisord/supervisord.conf
